Fixing Carousel Scroll on Mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -319,34 +319,36 @@ button {
     overflow-x: hidden;
   }
 
-  .searchDiv {
+  .titleDiv {
     grid-row: 1;
+  }
+  .searchDiv {
+    grid-row: 2;
   }
 
   .carousel-container {
-    grid-row: 2;
+    grid-row: 3;
     width: 100%;
     overflow-x: hidden;
   }
 
   .carousel {
-    grid-row: 2;
-    width: 100%;
-    overflow-x: hidden;
+    grid-row: 3;
+    /* width: 100%; */
+    overflow-x: scroll;
   }
 
   .controls {
-    grid-row: 3;
+    grid-row: 4;
     justify-self: center;
   }
 
   #gridE {
-    grid-row: 4;
-    width: 100%;
+    grid-row: 5;
   }
 
   .tableAlbumsDiv {
-    grid-row: 5;
+    grid-row: 6;
   }
 }
 
